--- a/conteudo/01_historico_e_evolucao_das_lentes.html
+++ b/conteudo/01_historico_e_evolucao_das_lentes.html
@@ -15,6 +15,7 @@
   <link href="css/cores.css" rel="stylesheet">
   <!--Extras - novas classes para facilitar-->
   <link rel="stylesheet" href="css/extras.css">
+  <link rel="stylesheet" href="css/custom.css">
   <link href="css/sncload.css" rel="stylesheet">
   <link href="css/magnific-popup.css" rel="stylesheet">
   <!-- referencia ao arquivo css com estilos especificos da pagina -->
@@ -244,13 +245,47 @@
                 pesquisas para torná-las cada vez mais eficazes, seguras e acessíveis. Existem várias opções disponíveis
                 para as mais diversas necessidades visuais, preferências pessoais e até mesmo para uso estético. Porém,
                 mesmo proporcionando liberdade, praticidade e autoestima, as lentes de contato ainda não conseguiram
-                tomar
-                o
-                lugar dos óculos. No Brasil, apenas 1% das pessoas portadoras de ametropia fazem uso de lentes de
+                tomar o lugar dos óculos. No Brasil, apenas 1% das pessoas portadoras de ametropia fazem uso de lentes de
                 contato.
               </p>
+              <h3>A história da lente de contato</h3>
+              <p>
+                A jornada das lentes de contato tem suas raízes na mente inovadora de grandes pensadores ao longo da história. Há mais de 500 anos, Leonardo da Vinci, renomado pintor, inventor, escultor e engenheiro, vislumbrou a possibilidade de corrigir a visão através do uso de lentes. Em 1508, ele concebeu a ideia de uma lente que, colocada sobre a córnea, poderia corrigir problemas de visão. Da Vinci experimentou a visualização através do fundo de uma tigela de vidro cheia de água, reconhecendo a necessidade de as lentes estarem em contato direto com os olhos. 
+              </p>
+              <p>
+                No século seguinte, em 1632, René Descartes, filósofo, físico e matemático francês, propôs uma ideia semelhante. Ele explorou os efeitos de imergir o rosto em um tubo de ensaio com água para alcançar resultados similares aos de Da Vinci. No entanto, seu conceito resultaria em lentes demasiadamente grandes para serem práticas. 
+              </p>
+              <p>
+                A história avançou em 1801, quando Thomas Young, físico, médico e egiptólogo britânico, refinou o projeto de Descartes. Young criou um dispositivo conhecido como "lava olhos", consistindo em um tubo de água com uma pequena lente na extremidade, enquanto ele próprio utilizava uma lente botânica para corrigir sua ametropia.
+              </p>
+              <p>
+                John Herschel, cientista britânico, trouxe novas ideias em 1827, sugerindo a moldagem da córnea para a produção de lentes corretivas. Herschel também abordou o astigmatismo, propondo a aplicação de geléia animal em uma cápsula de vidro sobre a córnea para melhorar a visão. 
+              </p>
+              <p>
+                Apesar desses esforços pioneiros, as limitações tecnológicas da época impediram a concretização dessas teorias. Somente na década de 1880, com o avanço na produção de vidro, Adolf Fick, médico alemão, fabricou com sucesso as primeiras lentes de contato. No entanto, essas lentes eram grossas e pesadas, causando desconforto devido à falta de oxigenação dos olhos.
+              </p>
+              <p>
+                Em 1929, William Feinbloom, optometrista nova-iorquino, desenvolveu uma nova lente a partir de uma mistura de vidro e plástico. Ele obteve patentes para lentes esclerais e híbridas, embora estas ainda fossem rígidas e desconfortáveis para os usuários. 
+              </p>
+              <p>
+                Kevin Tuhoy, óptico da Califórnia, introduziu lentes menores e mais confortáveis em 1948, um marco que desencadeou uma série de melhorias nas décadas seguintes. George Butterfield, optometrista do Oregon, adicionou curvas periféricas às lentes em 1950, modernizando sua adaptação. 
+              </p>
+              <p>
+                O desenvolvimento dos materiais de hidrogel levou à criação das primeiras lentes de contato gelatinosas em 1971, pela empresa Bausch & Lomb. Essas lentes eram mais seguras, confortáveis e maleáveis, abrindo caminho para soluções para miopia, hipermetropia e astigmatismo.
+              </p>
+              <p>
+                Nas décadas seguintes, a tecnologia continuou a evoluir, com o surgimento de lentes multifocais na década de 1980 e a introdução de lentes descartáveis em 1995 para facilitar a manutenção e higiene.
+              </p>
+              <p>
+                Hoje, as lentes de contato continuam a ser aprimoradas, oferecendo uma variedade de opções para diferentes necessidades visuais e preferências. Apesar de proporcionarem liberdade e praticidade, elas ainda não substituíram completamente os óculos, sendo adotadas por apenas 1% das pessoas com ametropia no Brasil.
+              </p>
             </div>
-            <h2 class="no-print">Histórico e evolução das lentes de contato: origem e principais fatos</h2>
+
+
+            <h2 class="no-print titulo-escuro">Histórico e evolução das lentes de contato: origem e principais fatos</h2>
+            <p class="no-print">
+              Clique ou toque para visualizar o conteúdo. 
+            </p>
             <ul class="linhatempo no-print hidden-sm hidden-xs">
               <li class="linhatempo-item">
                 <div class="linhatempo-conteudo">
@@ -293,6 +328,7 @@
                       acordo com seu projeto, a lente ficaria muito grande, o que não era prático, pois o usuário
                       ficaria
                       impossibilitado de piscar. </p>
+
                   </div>
                 </div>
               </li>
@@ -464,12 +500,13 @@
                       foram
                       desenvolvidas, oferecendo uma solução para o astigmatismo.
                     </p>
+                    
                   </div>
                 </div>
               </li>
               <li class="linhatempo-item">
                 <div class="linhatempo-conteudo">
-                  <button type="button" class="btn btn-descricao10" onclick="toggledescricao('descricao10', this)">
+                  <button type="button" class="btn-descricao10 btn" onclick="toggledescricao('descricao10', this)">
                     <img src="../conteudo/images/01/10.png" alt="">
                   </button>
                   <div id="descricao10" class="descricao">
@@ -498,10 +535,23 @@
                       lugar dos óculos. No Brasil, apenas 1% das pessoas portadoras de ametropia fazem uso de lentes de
                       contato.
                     </p>
+
+                    <img src="../conteudo/images/selo-presencialidade.png"
+                    class="center-block img-responsive no-print borda" alt="" style="width: 100px;">
+                    <div class="video-player">
+                      <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive" width="560" height="315"
+                          src="https://www.youtube.com/embed/AeOJyC4xQKU?si=skk0lMxiMMGW-_Cz" title="YouTube video player"
+                          frameborder="0"
+                          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </li>
             </ul>
+
             <div class="no-print hidden-lg hidden-md">
               <figure>
                 <img src="../conteudo/images/01/01.png" class="center-block img-responsive print borda" alt="">
