--- a/conteudo/02_composicao_e_funcao_dos_produtos.html
+++ b/conteudo/02_composicao_e_funcao_dos_produtos.html
@@ -82,6 +82,7 @@
     <section class="paginas">
       <!-- - - - - - - - cada página é independente  - - - - - - - - - - -->
       <div class="pagina" id="topo">
+        
         <div class="bloco1">
           <div class="container">
             <h2 class="titulo-b1">Composição e função dos produtos, das matérias-primas, recursos físicos e anatômicos
@@ -157,7 +158,7 @@
               (fluormetacrilato), foram realizadas e um nível razoável de permeabilidade ao oxigênio foi atingido.</p>
             <p>Por fim, a solução foi a inclusão de pequenos segmentos de borracha de silicone ao monômero
               metilmetacrilato
-              básico, 3-metacriloxi-propil-tris(trimetilsiloxi silano) ou Tris. Assim, pôde então ser combinado com o
+              básico, <span style="display: inline-block;">3-metacriloxi-propil-tris(trimetilsiloxi silano)</span> ou Tris. Assim, pôde então ser combinado com o
               PMMA
               para produzir polímeros rígidos vítreos altamente permeáveis ao oxigênio.</p>
             <p>Os materiais para LC resultantes ficaram conhecidos como copolímeros siloximetacrilatos e obtiveram muito
@@ -182,7 +183,7 @@
             <div class="caixa-destaque">
               <p>D = coeficiente de difusão <br>
                 K = coeficiente de solubilidade <br>
-                DK = medida específica de um determinado material óptico de sua permeabilidade ao O2 <br>
+                DK = medida específica de um determinado material óptico de sua permeabilidade ao O<sub>2</sub> <br>
               </p>
             </div>
             <p>Assim, encontram-se nas especificações de cada fabricação os coeficientes denominados DK/t, que
@@ -526,17 +527,18 @@
         </div>
         <div class="bloco7">
           <div class="container">
+            <figcaption class="no-print" aria-hidden="true">Toque na imagem para ampliá-la.</figcaption>
             <figure>
-              <img src="../conteudo/images/02/img10.png" class="center-block img-responsive print borda" alt="">
+              <a href="../conteudo/images/02/img10.png" target="_blank" class="no-print" aria-hidden="true">
+                <img src="../conteudo/images/02/img10.png" class="center-block img-responsive">
+              </a>
               <figcaption>Especificações de produtos <br>
                 Fonte: Adaptado de CooperVision (c2021)
               </figcaption>
             </figure>
-            <!-- <div class="btn-final no-print">
-              <a href="#topo"><button class="voltar">Voltar</button></a>
-            </div> -->
           </div>
         </div>
+
       </div>
     </section>
     <!-- - - - - - - - - - - - - - - - não alterar abaixo- - - - - - - - - - - - -->
