--- a/conteudo/04_adaptacao_de_lentes_de_contato.html
+++ b/conteudo/04_adaptacao_de_lentes_de_contato.html
@@ -175,7 +175,7 @@
             silicone hidrogel, principalmente ao removê-las, em razão do demasiado deslize entre os dedos, proveniente
             do
             silicone empregado em sua composição.</p>
-          <p>Existem duas opções básicas de tipo de uso de LCs gelatinosas:</p>
+          <p>Clique ou toque para visualizar as duas opções básicas que existem de tipos de uso de LCs gelatinosas.</p>
           <div class="no-print" aria-hidden="true">
             <ul class="nav nav-tabs" role="tablist">
               <li role="presentation" class="active"><a href="#lente1" aria-controls="home" role="tab"
@@ -267,7 +267,7 @@
                   <p> Veja uma adaptação de LC gelatinosa de troca anual.</p>
                   <p> Medidas da córnea:</p>
                   <p> Horizontal: 42,00</p>
-                  <p> Vertical:42,50</p>
+                  <p> Vertical: 42,50</p>
                   <p> Curva K = 42,00 (meridiano mais plano da córnea)</p>
                   <p>Assim, deve-se consultar a tabela do fabricante com o qual se trabalha para verificar qual é a CB
                     da
@@ -337,7 +337,7 @@
                   <p>Veja uma adaptação de LC gelatinosa descartável.</p>
                   <p>Medidas da córnea:</p>
                   <p>Horizontal: 45,50</p>
-                  <p>Vertical:46,00</p>
+                  <p>Vertical: 46,00</p>
                   <p> Curva K = 45,50</p>
                   <p> Ao consultar a tabela do fabricante A, observa-se que ele disponibiliza CB inteligente de 8,60
                     (que
@@ -368,7 +368,7 @@
                   <p> Agora veja outra adaptação de LC gelatinosa descartável.</p>
                   <p>Medidas da córnea:</p>
                   <p>Horizontal: 39,50</p>
-                  <p>Vertical:40,00</p>
+                  <p>Vertical: 40,00</p>
                   <p>Curva K = <b>39,50</b></p>
                   <p>Ao consultar a tabela do fabricante A de LCs descartáveis, lembre-se de que ele disponibiliza CB de
                     8,60
@@ -403,7 +403,7 @@
             <p> Veja uma adaptação de LC gelatinosa de troca anual.</p>
             <p> Medidas da córnea:</p>
             <p> Horizontal: 42,00</p>
-            <p> Vertical:42,50</p>
+            <p> Vertical: 42,50</p>
             <p> Curva K = 42,00 (meridiano mais plano da córnea)</p>
             <p>Assim, deve-se consultar a tabela do fabricante com o qual se trabalha para verificar qual é a CB da
               lente
@@ -455,7 +455,7 @@
             <p>Veja uma adaptação de LC gelatinosa descartável.</p>
             <p>Medidas da córnea:</p>
             <p>Horizontal: 45,50</p>
-            <p>Vertical:46,00</p>
+            <p>Vertical: 46,00</p>
             <p> Curva K = 45,50</p>
             <p> Ao consultar a tabela do fabricante A, observa-se que ele disponibiliza CB inteligente de 8,60 (que
               promete
@@ -468,7 +468,7 @@
             <p> Agora veja outra adaptação de LC gelatinosa descartável.</p>
             <p>Medidas da córnea:</p>
             <p>Horizontal: 39,50</p>
-            <p>Vertical:40,00</p>
+            <p>Vertical: 40,00</p>
             <p>Curva K = <b>39,50</b></p>
             <p>Ao consultar a tabela do fabricante A de LCs descartáveis, lembre-se de que ele disponibiliza CB de 8,60
               (que promete abranger curva K entre 40,00 e 45,00), portanto não comporta a curva K do candidato.</p>
@@ -625,8 +625,9 @@
               ao
               piscar das pálpebras, e proporciona conforto ao candidato.</p>
           </div>
-          <p class="no-print">Observe no vídeo abaixo</p>
-          <p class="text-center no-print">ESPERA AUDIOVISUAL.</p>
+          <p class="text-center no-print">Observe o GIF:</p>
+
+
           <iframe src="" class="espera center-block img-responsive" frameborder="0"></iframe>
           <p>Ao apresentar uma movimentação ideal, é possível definir a CB da lente a ser adaptada. </p>
           <figure>
@@ -653,7 +654,7 @@
             <img src="../conteudo/images/04/img04.png" class="center-block img-responsive print borda"
               alt="Figura mostra LC gelatinosa aderida ao olho, e sua borda ultrapassa 2 mm da região do limbo.">
             <figcaption> LC gelatinosa ultrapassando 2 mm da região do limbo<br>
-              Fonte: Pinterest (s.d.)
+              Fonte: Pinterest (s. d.)
             </figcaption>
           </figure>
           <p>A pupila normalmente mede em torno de 3 a 4 mm em uma iluminação normal, variando conforme a
@@ -891,7 +892,7 @@
               Fonte: Senac EAD (2024)
             </figcaption>
           </figure>
-          <p class="text-center no-print">ESPERA AUDIOVISUAL.</p>
+          <p class="text-center no-print">Observe o GIF:</p>
           <iframe src="" class="espera center-block img-responsive" frameborder="0"></iframe>
           <p>Após o tempo de estabilização, a LC tórica será avaliada e deverá apresentar leve movimento. Sua marca de
             orientação de rotação deverá estar na posição de 6h, indiferentemente da prescrição do eixo do
@@ -1130,7 +1131,7 @@
             <img src="../conteudo/images/04/img14.png" class="center-block img-responsive print borda"
               alt="Profissional segurando lâmpada de Burton com luz ultravioleta, visualizando LCs adaptadas com corante de fluoresceína.">
             <figcaption>Avaliação de LC RGP<br>
-              Fonte: Senac EAD (2023)
+              Fonte: Cusato Jr. apud Dias (2017)
             </figcaption>
           </figure>
           <p>Acompanhe os possíveis resultados do teste de LC RGP após a estabilização:</p>
@@ -1144,7 +1145,7 @@
             <img src="../conteudo/images/04/img15.png" class="center-block img-responsive print borda"
               alt="LC RGP justa adaptada na córnea, apresentando periferia escura e centro com acúmulo de fluoresceína.">
             <figcaption>LC RGP justa<br>
-              Fonte: Senac EAD (2024)
+              Fonte: Cusato Jr. apud Dias (2017)
             </figcaption>
           </figure>
           <p>Ao solicitar que o candidato pisque, percebe-se que a LC não se movimenta. Essa adaptação não é
@@ -1165,7 +1166,7 @@
             <img src="../conteudo/images/04/img16.png" class="center-block img-responsive print borda"
               alt="LC RGP frouxa adaptada na córnea, apresentando centro escuro com acúmulo de fluoresceína na periferia.">
             <figcaption>LC RGP frouxa<br>
-              Fonte: Senac EAD (2024)
+              Fonte: Cusato Jr. apud Dias (2017)
             </figcaption>
           </figure>
           <p>Ao solicitar que o candidato pisque, observa-se que a LC se movimenta demasiadamente ou até mesmo se
@@ -1186,10 +1187,7 @@
           <p class="no-print">O resultado de uma adaptação de LC RGP ideal é apresentado pela estrutura completa da LC
             com troca
             lacrimal, com leve coloração de corante de fluoresceína em toda a superfície corneana. A mobilidade da LC
-            é suave, ela se movimenta com o piscar e retorna para seu posicionamento central rapidamente. Assista ao
-            vídeo:</p>
-          <p class="text-center no-print">ESPERA AUDIOVISUAL.</p>
-          <iframe src="" class="espera center-block img-responsive" frameborder="0"></iframe>
+            é suave, ela se movimenta com o piscar e retorna para seu posicionamento central rapidamente. 
           <p>Ao identificar o teste com padrão de movimentação e posicionamento ideal, será definida a CB da LC com
             seu
             diâmetro correspondente da caixa de provas.</p>
@@ -1437,8 +1435,6 @@
           <h4 class="no-print">Ficha de registro e acompanhamento – adaptação de lentes de contato</h4>
           <p class="no-print">Veja o modelo de uma ficha de anamnese completa, com os registros de adaptação de LC:
           </p>
-          <p class="text-center no-print">ESPERA SOLUÇÕES EDUCACIONAIS.</p>
-          <iframe src="" class="espera center-block img-responsive" frameborder="0"></iframe>
         </div>
         <div id="t9">
           <h3>Encerramento</h3>
