--- a/conteudo/06_descarte_de_residuos.html
+++ b/conteudo/06_descarte_de_residuos.html
@@ -81,7 +81,7 @@
         <h2>Descarte de resíduos do processo de adaptação de lentes de contato: tipos de resíduos gerados; impactos
           ambientais causados por descarte incorreto de resíduos; sustentabilidade</h2>
         <div class="no-print" aria-hidden="true">
-          <p>Clique ou toque para visualizar os conteúdos</p>
+          <p>Clique ou toque para visualizar os conteúdos.</p>
           <div class="painel painel-descarte">
             <button type="button" class="bt-descarte bt-descarte1" data-toggle="modal"
               data-target="#modal-descarte1"></button>
@@ -179,7 +179,7 @@
                   </figure>
                   <p>As lentes de troca descartável vêm esterilizadas e lacradas originalmente de fábrica,
                     acondicionadas em um
-                    blister com solução estéril. Elas devem ser descartadas no lixo a cada experimentação realizada.</p>
+                    <i>blister</i> com solução estéril. Elas devem ser descartadas no lixo a cada experimentação realizada.</p>
                   <figure>
                     <img src="../conteudo/images/06/img03.png" class="center-block img-responsive print borda"
                       alt="Imagem mostra caixa de provas de LCs gelatinosas descartáveis, onde estão comportadas em compartimento com divisórias, e profissional segurando uma unidade lacrada acondicionada no blister com solução estéril.">
@@ -334,7 +334,7 @@
                     como na utilização de vidraria, equipamentos e produtos químicos.</p>
                   <h4>Classificação dos riscos associados à biossegurança</h4>
                   <p>O risco denota incerteza em relação a um evento futuro, sendo definido por Hirata e Filho (2002
-                    apud
+                    <i>apud</i>
                     Paludo;
                     Mateus, [s. d.]) como a probabilidade de ocorrer um acidente causando algum tipo de dano, lesão ou
                     enfermidade.</p>
@@ -621,7 +621,7 @@
                     </button>
                     <button type="button" class="bt-higienizacao bt-higienizacao4" data-toggle="popover"
                       data-trigger="focus" data-placement="top"
-                      data-content="Sanitização: Sanitização é o processo de redução de bactérias e micro-organismos até um nível considerado seguro pelos órgãos de saúde pública, garantindo a biossegurança do ambiente sanitizado.">
+                      data-content="Sanitização: É o processo de redução de bactérias e micro-organismos até um nível considerado seguro pelos órgãos de saúde pública, garantindo a biossegurança do ambiente sanitizado.">
                     </button>
                   </figure>
                   <figure>
@@ -670,9 +670,6 @@
                   <figure>
                     <img src="../conteudo/images/06/info01.png" class="center-block img-responsive print borda"
                       alt="Figura mostra mãos do profissional realizando assepsia de uma LC gelatinosa colorida e abaixo um estojo branco de acondicionamento para LC.">
-                    <figcaption>Assepsia de LC com produto multiuso<br>
-                      Fonte: EyeColors (c2024)
-                    </figcaption>
                   </figure>
                   <ul>
                     <li><b>Limpadores enzimáticos </b></li>
@@ -704,9 +701,6 @@
                   <figure>
                     <img src="../conteudo/images/06/info02.png" class="center-block img-responsive print borda"
                       alt="Figura mostra estojo para desinfecção de LC, em duas partes, sendo à direita o reservatório para solução e à esquerda a tampa com discos vazados para compartimentar as LCs a serem desinfetadas.">
-                    <figcaption>Estojo especial para desinfecção de LC RGP<br>
-                      Fonte: Senac EAD (2024)
-                    </figcaption>
                   </figure>
                   <ul>
                     <li><b>Solução salina 0,9%</b></li>
@@ -859,9 +853,23 @@
                     medidas corretas de sustentabilidade sejam tomadas, ao educar atuais e futuros usuários de LC, para
                     que
                     realizem um descarte consciente de suas lentes, colaborando, dessa forma, com a preservação do meio
-                    ambiente. </p>
-                  <p class="text-center no-print">ESPERA AUDIOVISUAL.</p>
-                  <iframe src="" class="espera center-block img-responsive" frameborder="0"></iframe>
+                    ambiente. Assista ao vídeo: </p>
+
+                    <img src="../conteudo/images/selo-presencialidade.png"
+                    class="center-block img-responsive no-print borda" alt="" style="width: 100px;">
+                    <div class="video-player">
+                      <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive" width="560" height="315"
+                          src="https://www.youtube.com/embed/zuiTIKD8D8s?si=b_m1SKVWNXZQhJ5g" title="YouTube video player"
+                          frameborder="0"
+                          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                      </div>
+                    </div>
+
+
+
+
                   <!-- <div class="btn-final no-print">
                     <a href="#topo3"><button class="voltar">Voltar</button></a>
                   </div> -->
@@ -943,7 +951,7 @@
             </figcaption>
           </figure>
           <p>As lentes de troca descartável vêm esterilizadas e lacradas originalmente de fábrica, acondicionadas em um
-            blister com solução estéril. Elas devem ser descartadas no lixo a cada experimentação realizada.</p>
+            <i>blister</i> com solução estéril. Elas devem ser descartadas no lixo a cada experimentação realizada.</p>
           <figure>
             <img src="../conteudo/images/06/img03.png" class="center-block img-responsive print borda"
               alt="Imagem mostra caixa de provas de LCs gelatinosas descartáveis, onde estão comportadas em compartimento com divisórias, e profissional segurando uma unidade lacrada acondicionada no blister com solução estéril.">
@@ -1050,7 +1058,7 @@
             físicos,
             como na utilização de vidraria, equipamentos e produtos químicos.</p>
           <h4>Classificação dos riscos associados à biossegurança</h4>
-          <p>O risco denota incerteza em relação a um evento futuro, sendo definido por Hirata e Filho (2002 apud
+          <p>O risco denota incerteza em relação a um evento futuro, sendo definido por Hirata e Filho (2002 <i>apud</i>
             Paludo;
             Mateus, [s. d.]) como a probabilidade de ocorrer um acidente causando algum tipo de dano, lesão ou
             enfermidade.</p>
@@ -1207,9 +1215,7 @@
           <figure class="no-print">
             <img src="../conteudo/images/06/info01.png" class="center-block img-responsive print borda"
               alt="Figura mostra mãos do profissional realizando assepsia de uma LC gelatinosa colorida e abaixo um estojo branco de acondicionamento para LC.">
-            <figcaption>Assepsia de LC com produto multiuso<br>
-              Fonte: EyeColors (c2024)
-            </figcaption>
+            
           </figure>
           <ul>
             <li><b>Limpadores enzimáticos </b></li>
@@ -1251,9 +1257,6 @@
           <figure class="no-print">
             <img src="../conteudo/images/06/info02.png" class="center-block img-responsive print borda no-print"
               alt="Figura mostra estojo para desinfecção de LC, em duas partes, sendo à direita o reservatório para solução e à esquerda a tampa com discos vazados para compartimentar as LCs a serem desinfetadas.">
-            <figcaption>Estojo especial para desinfecção de LC RGP<br>
-              Fonte: Senac EAD (2024)
-            </figcaption>
           </figure>
           <ul>
             <li><b>Solução salina 0,9%</b></li>
