--- a/conteudo/07_referencias.html
+++ b/conteudo/07_referencias.html
@@ -252,7 +252,7 @@
           https://www.eyecolors.com.br/opti-free-pure-moist-limpeza-que-acompanha-o-seu-ritmo/. Acesso em: 4 abr. 2024.
         </p>
         <p>PALUDO, Michele Putti; MATEUS, Gustavo Affonso Pisano. <b>Biossegurança aplicada aos serviços de saúde</b>.
-          [<i>S. l.</i>]:
+          <span style="display: inline-block;">[<i>S. l.</i>]</span>:
           Unicesumar, [s. d.]. Disponível em:
           https://www.unicesumar.edu.br/wp-content1/uploads/degustacao/ebook/ebook-material-didatico-podologia.pdf.
           Acesso
