--- a/conteudo/02_composicao_e_funcao_dos_produtos.html
+++ b/conteudo/02_composicao_e_funcao_dos_produtos.html
@@ -279,7 +279,7 @@
                 Fonte: Ver Bien (c2018)
               </figcaption>
             </figure>
-            <div class=" only-print">
+            <div class="acessivel only-print">
               <p>Acompanhe como as curvaturas são distribuídas em uma LC: </p>
               <ul>
                 <li>Curva base ou curva central</li>
@@ -299,8 +299,9 @@
                 de
                 facilitar a troca do filme lacrimal ao piscar, minimizando o atrito entre a lente e a córnea.</p>
             </div>
+
             <p class="no-print">Clique e acompanhe como as curvaturas são distribuídas em uma LC: </p>
-            <figure class="painel-curvas no-print">
+            <div class="painel-curvas no-print">
               <button type="button" class="btn-curvas btn-curva1" data-toggle="popover" data-trigger="focus"
                 data-placement="top" data-content="É a curvatura da porção central da superfície posterior (interna) da LC.
                   É desenhada conforme a curvatura corneana e pode ser expressa em dioptrias ou milímetros de raio.">
@@ -318,12 +319,15 @@
                 entre a lente e a córnea.">
                 Curva periférica
               </button>
-              <img src="../conteudo/images/02/painel/painel.png"
+              <!-- <img src="../conteudo/images/02/painel/painel.png"
                 class="center-block img-responsive print borda hidden-xs hidden-sm" style="max-width: 100%;" alt="">
               <figcaption class="hidden-xs hidden-sm">Estrutura de uma lente de contato <br>
                 Fonte: Instituto de Oftalmologia de Assis (s. d.)
-              </figcaption>
-            </figure>
+              </figcaption> -->
+            </div>
+
+
+            
             <figure>
               <img src="../conteudo/images/02/img04.png" class="center-block img-responsive"
                 alt="Figura mostrando olho de frente com LC hidrofílica (gelatinosa) aderida à córnea, com apoio da curva periférica na esclera.">
