--- a/conteudo/03_processo_de_fabricacao_das_lentes.html
+++ b/conteudo/03_processo_de_fabricacao_das_lentes.html
@@ -89,6 +89,8 @@
             Fonte: YouTube (2021)
           </figcaption>
         </figure>
+
+
         <div class="no-print" aria-hidden="true">
           <p>Clique ou toque para visualizar o conteúdo.</p>
           <div class="painel painel1">
@@ -274,7 +276,7 @@
             </div>
           </div>
         </div>
-        <div class="only-print">
+        <div class="acessivel only-print">
           <h3>Fabricação de lentes de contato rígidas gás-permeáveis</h3>
           <p>A produção de uma LC RGP é feita sob medida de acordo com os parâmetros estabelecidos pelo
             profissional especialista em adaptação de lentes de contato, portanto serão confeccionadas de forma
