--- a/conteudo/04_adaptacao_de_lentes_de_contato.html
+++ b/conteudo/04_adaptacao_de_lentes_de_contato.html
@@ -625,10 +625,15 @@
               ao
               piscar das pálpebras, e proporciona conforto ao candidato.</p>
           </div>
-          <p class="text-center no-print">Observe o GIF:</p>
+          <p class="no-print">Observe o GIF:</p>
 
 
-          <iframe src="" class="espera center-block img-responsive" frameborder="0"></iframe>
+          <div class="gifs">
+            <img src="images/04/GIF 1 - Justo.gif" alt="">
+          </div>
+
+
+
           <p>Ao apresentar uma movimentação ideal, é possível definir a CB da lente a ser adaptada. </p>
           <figure>
             <img src="../conteudo/images/04/etapa02.png" class="etapa center-block img-responsive print borda" alt="">
@@ -892,8 +897,10 @@
               Fonte: Senac EAD (2024)
             </figcaption>
           </figure>
-          <p class="text-center no-print">Observe o GIF:</p>
-          <iframe src="" class="espera center-block img-responsive" frameborder="0"></iframe>
+          <p class="no-print">Observe o GIF:</p>
+          <div class="gifs">
+            <img src="images/04/GIF 2 - Solto.gif" alt="">
+          </div>          
           <p>Após o tempo de estabilização, a LC tórica será avaliada e deverá apresentar leve movimento. Sua marca de
             orientação de rotação deverá estar na posição de 6h, indiferentemente da prescrição do eixo do
             astigmatismo, podendo apresentar leve giro de até 5° (1h), desde que não altere a AV do candidato. </p>
